# crossflow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  bitbucket-pipelines.yml  pyproject.toml  run_client_tests
.github/workflows/: ci.yaml  python-package.yml  release.yaml
crossflow/: __init__.py  _version.py  clients.py  config.py  filehandling.py  kernels.py  tasks.py
crossflow.egg-info/: PKG-INFO
docs/source/: clients.rst  clients_advanced.rst  conf.py  developer_guide.rst  examples.rst  filehandles.rst  filehandles_advanced.rst  getting_started.rst  index.rst  tasks.rst  tasks_advanced.rst
examples/: Crossflow 101.ipynb  README.md  Simple workflow.ipynb  example1.py  example2.py  example3.py  input.txt  joined.txt  output.txt
examples/.ipynb_checkpoints/: Crossflow 101-checkpoint.ipynb
examples/Notebooks/: Crossflow 101.ipynb  CrossflowGromacsExample.tgz  README.md  Simple workflow.ipynb
examples/Notebooks/Amber/: Crossflow workflows 101.ipynb  README.md  dhfr.step1.rst7  dhfr_step1.rst7  final_coordinates.rst7  logfile  max_rmsd.rst7  mdinfo  mdout  restrt  stage3.mdout  step1.mdout  test.mdout  test.rst7
examples/Notebooks/Amber/.ipynb_checkpoints/: Crossflow workflows 101-checkpoint.ipynb  Xbowflow workflows 101-checkpoint.ipynb
examples/Notebooks/Chignolin_unfolding/: README  WE_unfolding.py
examples/Notebooks/Chignolin_unfolding/cluster/: README  dask-scheduler.con
examples/Notebooks/Chignolin_unfolding/common_files/: md.in
examples/Notebooks/Gromacs/: Crossflow 201.ipynb  Crossflow workflows 101.ipynb  README.md  bpti-em.edr  bpti-em.tpr  bpti-em.trr  bpti_min_0.gro  bpti_min_1.gro  bpti_min_2.gro  bpti_min_3.gro  bpti_min_4.gro  bpti_min_5.gro  bpti_min_6.gro  bpti_min_7.gro  bpti_min_8.gro  bpti_min_9.gro  bpti_min_{}.gro  final_coordinates.gro  max_rmsd.gro  mdout.mdp  test.gro
examples/Notebooks/Gromacs/.ipynb_checkpoints/: Crossflow 201-checkpoint.ipynb  Crossflow workflows 101-checkpoint.ipynb
examples/Notebooks/PockDock/: 1xvc_0.pdbqt  1yv3_0.pdbqt  2bys_0.pdbqt  3hl7_0.pdbqt  3ip0_0.pdbqt  Docking.ipynb  README.md  ReverseDocking-1QY1-v2.ipynb  ReverseDocking-1QY1.ipynb  ReverseDocking.ipynb  local_cluster.sh  pockdock.ipynb
examples/Notebooks/PockDock/2iuzb_out/: 2iuzb.pml  2iuzb.tcl  2iuzb_PYMOL.sh  2iuzb_VMD.sh  2iuzb_info.txt  2iuzb_pockets.pqr
examples/Notebooks/PockDock/receptors/: 1afq_receptor.pdbqt  1cib_receptor.pdbqt  1ecc_receptor.pdbqt  1g67_receptor.pdbqt  1gky_receptor.pdbqt  1ha3_receptor.pdbqt  1imb_receptor.pdbqt  1j6z_receptor.pdbqt  1l5s_receptor.pdbqt  1lic_receptor.pdbqt  1oke_receptor.pdbqt  1ow3_receptor.pdbqt  1q0b_receptor.pdbqt  1ryo_receptor.pdbqt  1t49_receptor.pdbqt  1tr5_receptor.pdbqt  1u1d_receptor.pdbqt  1za1_receptor.pdbqt  2al4_receptor.pdbqt  2gir_receptor.pdbqt  2h4k_receptor.pdbqt  2hka_receptor.pdbqt  2hvd_receptor.pdbqt  2ieg_receptor.pdbqt  2iuz_receptor.pdbqt  2ixu_receptor.pdbqt  2iyq_receptor.pdbqt  2npq_receptor.pdbqt  2ofp_receptor.pdbqt  2piq_receptor.pdbqt  2q8h_receptor.pdbqt  2w5k_receptor.pdbqt  2wi7_receptor.pdbqt  2wkw_receptor.pdbqt  3bl7_receptor.pdbqt  3cfn_receptor.pdbqt  3dhh_receptor.pdbqt  3fqk_receptor.pdbqt  3gqz_receptor.pdbqt  3h9j_receptor.pdbqt  (+3 more)
examples/Scripts/: README.md  example1.py  example2.py  example3.py  processed.txt
examples/Scripts/Slurm_GPU/: dask-mig-worker
examples/notebooks/: Crossflow 101.ipynb  Simple workflow.ipynb
examples/notebooks/Amber/: README.md
examples/notebooks/Chignolin_unfolding/: WE_unfolding.py
examples/notebooks/Chignolin_unfolding/cluster/: dask-workers.con
examples/notebooks/Gromacs/: Crossflow workflows 101.ipynb
examples/notebooks/PockDock/: ReverseDocking.ipynb  complexes.list  local_cluster.sh  prz.pdbqt
examples/notebooks/PockDock/receptors/: 1ank_receptor.pdbqt  1br6_receptor.pdbqt  1ctr_receptor.pdbqt  (+33 more)
examples/scripts/: example1.py  example2.py  example3.py
examples/scripts/Slurm_GPU/: slurm_example.sh
sandbox/: 1qy1.gro  1qy1.ncrst  ANM.ipynb  Error Handling.ipynb  Untitled.ipynb  enm-md.ipynb  example_workflow-Copy1.ipynb  example_workflow.ipynb  md.dcd  smooth.xtc  sort.py  test.gro  test.nc  test.py  tutorial_files.tgz  workflow.py
sandbox/tutorial_files/: 1qy1.prmtop  1qy1.psf  1qy1.top  fakemd
scripts/: cluster.json  local_cluster
test/: run_client_tests  test_filehandling.py  test_kernels.py  test_tasks.py
tests/: test_client.py  test_filehandling.py  test_tasks.py
(+15 files in other folders)
