[build-system]
# Build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "crossflow"
dynamic = ["version"]
description = "Crossflow allows you to build and execute complex workflows that chain together command-line driven tools."
authors = [
    {name = "Charlie Laughton", email = "charles.laughton@nottingham.ac.uk"},
    {name = "Christian Suess", email = "christian.suess@nottingham.ac.uk"},
    {name = "James Gebbie-Rayet", email = "james.gebbie@stfc.ac.uk"},
    {name = "Sam Cox", email = "sam.cox@hdruk.ac.uk"},
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha"
]
keywords = ["hpc", "workflows", "molecular dynamics"]
requires-python = ">=3.11"
dependencies = [
    "dask",
    "distributed",
    "fsspec",
]

[project.urls]
Homepage = "https://"
Repository = "https://"
Documentation = "https://"

[project.optional-dependencies]
testing = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-sugar==1.0.0"
]

pre-commit = [
    "pre-commit==3.7.1",
    "pylint==3.2.5"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-contentui",
    "sphinxcontrib-details-directive",
    "sphinx_copybutton",
    "furo",
    "markupsafe<2.1"
]

